--- a/estilos/style.css
+++ b/estilos/style.css
@@ -112,9 +112,22 @@ form {
     flex-direction: column;
 }
 
+label {
+    padding: 10px;
+    margin-top: 10px;
+}
+
 input {
     width: 300px;
     height: 20px;
+    padding: 7px;
+    margin-top: 15px;
+    border: 1px solid black;
+    border-radius: 15px;
+}
+
+textarea {
+    width: 300px;
     padding: 7px;
     margin-top: 15px;
     border: 1px solid black;
